Introduce SCMCons, Deprecate SCMList